audioconvert: unable to set property 'mix-matrix'
parse launch does not support mix-matrix syntax anymore.
$ gst-launch-1.0 audiotestsrc ! audio/x-raw, channels=4 ! audioconvert mix-matrix="<<(float)1.0, (float)0.0, (float)0.0, (float)0.0>, <(float)0.0, (float)1.0, (float)0.0, (float)0.0>>" ! audio/x-raw,channels=2 ! autoaudiosink
Getting:
GST_PIPELINE subprojects/gstreamer/gst/parse/grammar.y:453:gst_parse_element_set: could not set property "mix-matrix" in element "audioconvert0" to "<<(float)1.0, (float)0.0, (float)0.0, (float)0.0>, <(float)0.0, (float)1.0, (float)0.0, (float)0.0>>"
Working with 1.18